--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<title>Home Page</title>
 </head>
 <body>
-	<a href='byui.html'>BUY-I</a><br/>
-	<a href='w04_challenge.html'>Week 04 Challenge</a><br/>
-	<a href='troubleshooting.html'>Troubleshooting</a><br/>
-	<a href='w05_challenge.html'>Week 05 Challenge</a><br/>
-	<a href='w06_challenge.html'>Week 06 Challenge</a><br/>
-	<a href='positioning.html'>Positioning</a><br/>
+	<a href='byui.html'>BUY-I</a><br>
+	<a href='w04_challenge.html'>Week 04 Challenge</a><br>
+	<a href='troubleshooting.html'>Troubleshooting</a><br>
+	<a href='w05_challenge.html'>Week 05 Challenge</a><br>
+	<a href='w06_challenge.html'>Week 06 Challenge</a><br>
+	<a href='positioning.html'>Positioning</a><br>
 </body>
 </html>
