--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Home Page</title>
+	<meta charset='UTF-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+	<title>Mtl Rafting | Whitewater Rafting | Home</title>
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<a href='byui.html'>BUY-I</a><br>
-	<a href='w04_challenge.html'>Week 04 Challenge</a><br>
-	<a href='troubleshooting.html'>Troubleshooting</a><br>
-	<a href='w05_challenge.html'>Week 05 Challenge</a><br>
-	<a href='w06_challenge.html'>Week 06 Challenge</a><br>
-	<a href='positioning.html'>Positioning</a><br>
+	<div id='content'>
+		<header>
+			<a id='logo_link' href='index.html'>
+				<img class='logo' src='images/mtl-rafting_logo.png' alt='Mtl Rafting Logo'>
+			</a>
+			<nav>
+				<a href='index.html'>Home</a>
+				<a href='aboutus.html'>About Us</a>
+				<a href='site-plan-rafting.html'>Site Plan</a>
+				<a href='contactus.html'>Contact Us</a>
+			</nav>
+		</header>
+		<div id='hero'>
+			<div id='hero-box'>
+				<img id='hero-img' src='images/hero.png' alt='People enjoying rafting'>
+			</div>
+			<section id='hero-msg'>
+				<h1 class='home-title'>Have An Adventure</h1>
+				<h4>Make Memories with Mtl Rafting</h4>
+				<div class='button-box'>
+					<a class='book' href='contactus.html'>Book Now</a>
+				</div>
+			</section>
+		</div>
+		<main class='home-grid'>
+			<section class='rivers-card'>
+				<img class='card-img' src='images/rivers.jpg' alt='river in forest'>
+				<img class='icon' src='images/river_icon.png' alt='river icon'>
+				<h2>Rivers</h2>
+			</section>
+			<section class='camping-card'>
+				<img class='card-img' src='images/camping.jpg' alt='tent in mountains'>
+				<img class='icon' src='images/fire_icon.png' alt='fire icon'>
+				<h2>Camping</h2>
+			</section>
+			<section class='rapids-card'>
+				<img class='card-img' src='images/rapids.jpg' alt='rafting boat'>
+				<img class='icon' src='images/oars.png' alt='oars icon'>
+				<h2>Rapids</h2>
+			</section>
+			<div id='background'></div> 
+			<img class='mountains' src='images/mountains.jpg' alt='Misty mountains'>
+			<section class='msg'>
+				<h2>More Than Just The Thrill</h2>
+				<p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+				<a class='join' href='aboutus.html'>Join Us</a>
+			</section>
+		</main>
+		<footer>
+			<p id='info'>Mtl Rafting &copy; 2022 - Xavier Serrano - WDD130-24</p>
+			<p><a href='site-plan-rafting.html'>Site Plan</a></p>
+			<p><a href='contactus.html'>Contact Us</a></p>
+			<div class='social'>
+				<a href='https://facebook.com' target='_blank'>
+					<img src='images/facebook.png' alt='Facebook icon'>
+				</a>
+				<a href='https://twitter.com' target='_blank'>
+					<img src='images/twitter.png' alt='Twitter icon'>
+				</a>
+				<a href='https://instagram.com' target='_blank'>
+					<img src='images/instagram.png' alt='Instagram icon'>
+				</a>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
