--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 	<a href='w05_challenge.html'>Week 05 Challenge</a><br>
 	<a href='w06_challenge.html'>Week 06 Challenge</a><br>
 	<a href='positioning.html'>Positioning</a><br>
+	<a href='w09_challenge.html'>Week 09 Challenge</a><br>
 </body>
 </html>
