--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
 <head>
-	<meta charset="utf-8">
+	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 	<title>Troubleshooting Exercice</title>
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<h2>Whitewater rafting vacation | Dry Oar Boating | Home</h2>
-		<img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Dry Oar Logo">
+		<img src='http://brothert.net/dryoar/images/dryoarlogo.png' alt='Dry Oar Logo'>
 		<nav>
 			<h1>Dry Oar</h1>
 			<ul>
@@ -23,7 +23,7 @@
 	</header>
 	<main>
 		<div>
-			<img src="http://brothert.net/dryoar/images/river-wide.JPG" alt="wide shot of the salmon river">
+			<img src='http://brothert.net/dryoar/images/river-wide.JPG' alt='wide shot of the salmon river'>
 		</div>
 		<section>
 			<div>
@@ -31,7 +31,7 @@
 				<p>We believe that there is nothing like a river trip for <em>relaxing</em>. That is why we subscribe to the dry oar philosophy of boating. Keeping your oars dry for us means taking time to look around and notice the <strong>beauty</strong> that surrounds the rivers we love.</p>
 			</div>
 			<div>
-				<img src="http://brothert.net/dryoar/images/river-evening.jpg" alt="peaceful evening shot of a river">
+				<img src='http://brothert.net/dryoar/images/river-evening.jpg' alt='peaceful evening shot of a river'>
 			</div>
 		</section>
 	</main>
